--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ header {
 
  footer{
     text-align: center;
-    background: url(/bg.jpg);
+    background: url(./bg.jpg);
     padding: 40px 0;
  }
  
